# simbar

./: Cargo.toml  README.md  simbar
example_config/: simbar.mods  simbar.modules  simbar.toml
example_config/modules/: date  memory  network  whoami
src/: bar.rs  config.rs  main.rs  x11_interface.rs  xstatus.rs
