[package]
name = "simbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = { version = "1", features = ["derive"] }
xdg = "2.4.1"
clap = { version = "3.1.2", features = ["derive"] }
