[package]
name = "simbar"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.5.8"
xdg = "2.4.1"
clap = { version = "3.1.2", features = ["derive"] }
x11 = "2.19.1"
regex = "1.5.4"
